"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2006-12-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-27:
	  Implemented most of remaining execute/recheck CHP functions, 
		only send/receive left (all untested).
	  Need to define some sort of CHP footprint or general method for
		allocating ChannelData field members or use footprint.
	  Reminder: execute/recheck moves successors to the recheck/enqueue
		queues depending on the event type.  
	  CHPSIM::nonmeta_context now has a recheck queue for listing
		successors to check.  


2006-12-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-26:
	  Cleaned up some of last revisions changes.  
	  Re-enabled ENABLE_CHP_EXECUTE switch, implemented more
		CHP::action::execute and ::recheck methods, but still
		some remain undefined (link fail).  
	  Moved global ID lookup function to global_entry_context, 
		for more convenience and consistent reuse by context classes.
		Added Object/global_entry_context.tcc.
		Implemented simple_nonmeta_{instance,value}_reference::
			lookup_nonmeta_global_index().  
	  CHP::action::recheck now returns a bool to indicate whether or not
		the *invoking* event should be enqueued for execution.  
		In other cases, the event's successors are selected from.  


	* HACKT-00-01-04-main-00-80-63-chpsim-01-25:
	  Rewrote a bunch of instance-reference lookup functions to take
		a bundled global_entry_context argument for ease of 
		maintainence and correctness-reasoning.  
	  nonmeta_context_base new derived from global_entry_context
		for lookup consistency.  
	  SIM::CHPSIM::DependenceSetCollector now derived from
		global_entry_context for consistency.
	  enum_expr: now tentatively uses pint_const as its nonmeta
		representation type. 